Fixed wrapping too early on preview title

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -70,12 +70,12 @@ h1 {
                     display: flex;
                     flex-direction: column;
                     height: 0;
-                    width: 75%;
+                    width: 80%;
                     justify-content: flex-end;
 
                     position:relative;
                     top: 20%;
-                    left: 12.5%
+                    left: 10%
 
                 }
                 .poster-title {
